<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/confirmarDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margen_dcho"
            android:layout_marginStart="@dimen/margen_izdo"
            android:paddingTop="30dp"
            android:text="@string/confirmarDatos"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="25dp">

            <TextView
                android:id="@+id/tituloNombre"
                android:layout_width="@dimen/ancho_columna1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margen_dcho"
                android:layout_marginStart="@dimen/margen_izdo"
                android:text="@string/nombre"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contenidoNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_vertical">

            <TextView
                android:id="@+id/tituloFechaNacimiento"
                android:layout_width="@dimen/ancho_columna1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margen_dcho"
                android:layout_marginStart="@dimen/margen_izdo"
                android:text="@string/fecha_de_nacimiento"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contenidoFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_de_nacimiento" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_vertical">

            <TextView
                android:id="@+id/tituloTelefono"
                android:layout_width="@dimen/ancho_columna1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margen_dcho"
                android:layout_marginStart="@dimen/margen_izdo"
                android:text="@string/telefono"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contenidoTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_vertical">

            <TextView
                android:id="@+id/tituloEmail"
                android:layout_width="@dimen/ancho_columna1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margen_dcho"
                android:layout_marginStart="@dimen/margen_izdo"
                android:text="@string/email"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contenidoEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_vertical">

            <TextView
                android:id="@+id/tituloDescripcion"
                android:layout_width="@dimen/ancho_columna1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margen_dcho"
                android:layout_marginStart="@dimen/margen_izdo"
                android:text="@string/observaciones"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contenidoDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/observaciones" />

        </LinearLayout>

        </LinearLayout>

    <Button
        android:id="@+id/editarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/editarDatos"
        android:textColor="@android:color/white" tools:targetApi="lollipop"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>